fixed keyboard size on mobile

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ h2 {
   font-size: 3rem;
   font-weight: bold;
   margin: 0px;
+  text-align: center;
 }
 
 #board-container {
@@ -88,10 +89,18 @@ h2 {
   transform: scale(0.95);
 }
 
-@media (max-width: 1250px) {
+@media (max-width: 600px) {
+  #keyboard {
+    gap: 10px;
+  }
+
+  .keyboard-row {
+    gap: 2px;
+  }
+
   .key {
-    width: 29px;
-    height: 30px;
+    width: 35px;
+    height: 65px;
   }
 
   [data-letter="ENTER"] {
